Fix spacing - related to 9b8ee01edd35c9f7d47312bccb0e7cbdcf036cd6

--- a/assets/admin/less/admin.less
+++ b/assets/admin/less/admin.less
@@ -293,9 +293,11 @@ Ticket Replies
 		margin-top: 1.5em;
 	}
 }
+#wp-wpas_reply-wrap {
+	margin-bottom: 15px;
+}
 .wp-core-ui {
 	.wpas-reply-actions {
-		margin-top: 15px;
 		.button,
 		.button-primary,
 		.button-secondary {
